--- a/quiz.html
+++ b/quiz.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets//style.css">
 <body>
-    <div class="container">
+    <div class="box">
         <div id="home" class="flex-column flex-center">
             <h1>Random Quiz</h1>
             <a href="/quiz.html" class="navigation">Play</a>
