--- a/quiz.html
+++ b/quiz.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
     <link rel="stylesheet" href="assets//style.css">
 <body>
     <div class="box">
-        <div id="home" class="flex-column flex-center">
+        <div id="home" class="home">
             <h1>Random Quiz</h1>
             <a href="/quiz.html" class="navigation">Play</a>
             
