--- a/quiz.html
+++ b/quiz.html
@@ -2,17 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-    <link rel="stylesheet" href="assets//style.css">
+    <title>Quiz Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="game.css">
+</head>
 <body>
-    <div class="box">
-        <div id="home" class="home">
-            <h1>Random Quiz</h1>
-            <a href="/quiz.html" class="navigation">Play</a>
-            
-        </div>
-    </div>
-</body>
-</html>
+    <div>
+        <div>
+            <div>
+                <div>
+                    <p>
+                        sample text
+                    </p>
+                    <div>
+                        <div></div>
+                    </div>
+                </div>
+                <div>
+                    <p>
+                       result
+                    </p>
+                    <h1>
+                        sample text
+                    </h1>
+                </div>
+            </div>
