create the first question structure and style

--- a/quiz.html
+++ b/quiz.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="assets//style.css">
 </head>
-<body>
+<body id="quiz-page">
     <div>
         <div>
             <div>
@@ -28,3 +27,9 @@
                     </h1>
                 </div>
             </div>
+            <h1 id="inquiry">First question?</h1>
+            <div class="answer-box">
+                <p class="solution-letter">A</p>
+                <p class="solution-data" data-number="1">Solution</p>
+            </div>
+            
