Update solution  and scorebar styles

--- a/quiz.html
+++ b/quiz.html
@@ -34,12 +34,11 @@
                         Score
                     </p>
                     <h1 class="score-text" id="result">
-                        0
-                    </h1>
+                        0789
                 </div>
                 <div class="score-container">
                     <p id="status" class="score-calculator">
-                        Question
+                        Status
                     </p>
                     <div id="status-bar">
                         <div id="status-bar-full"></div>
