fix responsivnes on smaller screen sizes and adding description to home page

--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,7 @@
                 <p class="solutionData" data-number="4">solution</p>
             </div>
 
-            <div id="scoreDisplay">
+            <div class="scoreDisplay">
                 <div class="scoreContainer">
                     <p class="scoreCalculator">
                         Score
@@ -36,7 +36,7 @@
                     <h1 class="scoreText" id="result">
                         0
                 </div>
-                <div class="scoreContainer">
+                <div class="scoreContainer2">
                     <p id="status" class="score-calculator">
                     Status
                     </p>
