--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Home page</title>
     <link rel="stylesheet" href="assets//style.css">
 <body>
-    <div class="box">
+        <div class="box">
         <div id="home" class="home">
+            <h1 class="intro-text">Quizzes are a great way to have fun and learn new things with your friends. 
+                Whether you want to know more about culture, sport, science, history, or other topics, then you are in the right place. 
+                Check out this short quiz to test you knowledge on the world.</h1>
             <h1>Random Quiz</h1>
             <a href="/quiz.html" class="navigation">Play</a>
             
