update index page main heading and tidy up minor errors in the code

--- a/finishedquiz.html
+++ b/finishedquiz.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="box">
-        <div id="someid" class="flex-center flex-column">
+        <div>
             <h1 id="endResult">0</h1>
-            
             <a href="/quiz.html" class="navigation">Play Again</a>
             <a href="/" class="navigation">Go Home</a>
         </div>
