--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
             <h1 class="intro-text">Quizzes are a great way to have fun and learn new things with your friends. 
                 Whether you want to know more about culture, sport, science, history, or other topics, then you are in the right place. 
                 Check out this short quiz to test you knowledge on the world.</h1>
-            <h1>Random Quiz</h1>
+            <h2><i class="fab fa-earlybirds"></i> Random Quiz <i class="fab fa-earlybirds"></i></h2>
             <a href="/quiz.html" class="navigation">Play</a>
             
         </div>
     </div>
+<!-- Font awesome script -->
+    <script src="https://kit.fontawesome.com/816e169a71.js" crossorigin="anonymous"></script>
 </body>
 </html>
