--- a/quiz.html
+++ b/quiz.html
@@ -8,8 +8,7 @@
 </head>
 <body id="quizPage">
     <div class="box2">
-        <div id="quiz" class="justify-center flex-column">
-            
+        <div>
             <h1 id="inquiry">First question?</h1>
             <div class="answerBox">
                 <p class="solutionLetter">a)</p>
@@ -33,8 +32,8 @@
                     <p class="scoreCalculator">
                         Score
                     </p>
-                    <h1 class="scoreText" id="result">
-                        0
+                    <h1 class="scoreText" id="result"></h1>
+                        
                 </div>
                 <div class="scoreContainer2">
                     <p id="status" class="score-calculator">
