update comments in html and add metatags

--- a/finishedquiz.html
+++ b/finishedquiz.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Quiz with random questions to test knowledge on general questions">
+    <meta name="keywords" content="quiz, fun, generalquiz, game, knowledge, surf, challenge, questios">
+    <title>End Game</title>
     <link rel="stylesheet" href="assets//style.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
         <div>
             <h1 id="endResult">0</h1>
             <a href="/quiz.html" class="navigation">Play Again</a>
-            <a href="/" class="navigation">Go Home</a>
+            <a href="/" class="navigation" id="navigation">Go Home</a>
         </div>
     </div>
     <script src="finish.js"></script>
