--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Quiz with random questions to test knowledge on general questions">
+    <meta name="keywords" content="quiz, fun, generalquiz, game, knowledge, surf, challenge, questios">
     <title>Home page</title>
     <link rel="stylesheet" href="assets//style.css">
 <body>
