--- a/quiz.html
+++ b/quiz.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Quiz with random questions to test knowledge on general questions">
+    <meta name="keywords" content="quiz, fun, generalquiz, game, knowledge, surf, challenge, questios">
     <title>Quiz Page</title>
     <link rel="stylesheet" href="assets//style.css">
 </head>
 <body id="quizPage">
+
+<!-- Quiz questions structure -->  
     <div class="box2">
         <div>
             <h1 id="inquiry">First question?</h1>
@@ -27,6 +31,7 @@
                 <p class="solutionData" data-number="4">solution</p>
             </div>
 
+<!-- Structure for score containers and statusbar container -->              
             <div class="scoreDisplay">
                 <div class="scoreContainer">
                     <p class="scoreCalculator">
