code comment and tidy up

--- a/finishedquiz.html
+++ b/finishedquiz.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="assets//style.css">
 </head>
 <body>
+
+
+<!-- End page main container -->
+
     <div class="box">
         <div>
             <h1 id="endResult">0</h1>
@@ -16,6 +20,7 @@
             <a href="/" class="navigation" id="navigation">Go Home</a>
         </div>
     </div>
+    
     <script src="finish.js"></script>
 </body>
 </html>
