--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Home page</title>
     <link rel="stylesheet" href="assets//style.css">
 <body>
+
+<!-- Intro page container and belonging text -->    
         <div class="box">
         <div id="home" class="home">
             <h1 class="intro-text">Quizzes are a great way to have fun and learn new things with your friends. 
