--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 Whether you want to know more about culture, sport, science, history, or other topics, then you are in the right place. 
                 Check out this short quiz to test you knowledge on the world.</h1>
             <h2><i class="fab fa-earlybirds"></i> Random Quiz <i class="fab fa-earlybirds"></i></h2>
-            <a href="/quiz.html" class="navigation">Play</a>
+            <a href="quiz.html" class="navigation">Play</a>
             
         </div>
     </div>
