--- a/finishedquiz.html
+++ b/finishedquiz.html
@@ -16,8 +16,8 @@
     <div class="box">
         <div>
             <h1 id="endResult">0</h1>
-            <a href="/quiz.html" class="navigation">Play Again</a>
-            <a href="/" class="navigation" id="navigation">Go Home</a>
+            <a href="quiz.html" class="navigation">Play Again</a>
+            <a href="" class="navigation" id="navigation">Go Home</a>
         </div>
     </div>
     
