fix error in readme

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Quiz with random questions to test knowledge on general questions">
     <meta name="keywords" content="quiz, fun, generalquiz, game, knowledge, surf, challenge, questios">
     <title>Home page</title>
-    <link rel="stylesheet" href="assets//CSS//style.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
 <body>
 
 <!-- Intro page container and belonging text -->    
