--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Quiz with random questions to test knowledge on general questions">
     <meta name="keywords" content="quiz, fun, generalquiz, game, knowledge, surf, challenge, questios">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="assets//CSS//style.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body id="quizPage">
 
